--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "node scripts/seed.js",
+    "seed:data": "node src/scripts/seedData.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare-production": "chmod +x scripts/prepare-production.js && node scripts/prepare-production.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -28,10 +30,14 @@
     "dotenv": "^16.5.0",
     "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.0",
+    "pdfkit-table": "^0.1.99",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
@@ -47,6 +53,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^20.17.30",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.13.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
