--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,1 @@
-{
-  "presets": ["next/babel"],
-  "plugins": [
-    ["@babel/plugin-transform-react-jsx", {
-      "runtime": "automatic"
-    }]
-  ]
-} 
+{ "presets": ["next/babel"] }
