--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pdfkit-table": "^0.1.99",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.4.0",
     "react-csv": "^2.2.2",
     "react-dom": "^19.0.0"
   },
