--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "seed": "node scripts/seed.js",
     "seed:data": "node src/scripts/seedData.js",
-    "prepare-production": "chmod +x scripts/prepare-production.js && node scripts/prepare-production.js"
+    "prepare-production": "chmod +x scripts/prepare-production.js && node scripts/prepare-production.js",
+    "data:retention": "node src/scripts/dataRetention.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
